--- a/src/TomKerkhove.ApiApps.Decompressor/TomKerkhove.ApiApps.Decompressor.csproj
+++ b/src/TomKerkhove.ApiApps.Decompressor/TomKerkhove.ApiApps.Decompressor.csproj
@@ -143,6 +143,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\DecompressionController.cs" />
+    <Compile Include="Exceptions\DecompressionException.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
